--- a/templates/backoffice/bakery/index.html.twig
+++ b/templates/backoffice/bakery/index.html.twig
@@ -28,15 +28,18 @@
                 <td class="align-middle text-center">{{ bakery.id }}</td>
                 <td class="align-middle text-center">{{ bakery.name }}</td>
                 <td class="align-middle text-center">{{ bakery.address }}</td>
-                <td class="align-middle text-center">{{ bakery.profileImg }}</td>
+                <td class="align-middle text-center"><img class="backoffice_images" src="{{ bakery.profileImg }}"</td>
                 <td class="align-middle text-center">{{ bakery.phoneNumber }}</td>
                 <td class="align-middle text-center">{{ bakery.rating }}</td>
                 <td class="align-middle text-center">{{ bakery.status }}</td>
                 <td class="align-middle text-center">{{ bakery.deliveryFees }}</td>
                 <td class="align-middle text-center">{{ bakery.deliveryTime }}</td>
                 <td class="align-middle text-center">
-                    <a class="btn btn-outline-light mb-2 text-uppercase" href="{{ path('app_backoffice_bakery_show', {'id': bakery.id}) }}">show</a>
+                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_bakery_show', {'id': bakery.id}) }}">show</a>
                     <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_bakery_edit', {'id': bakery.id}) }}">edit</a>
+                </td>
+                <td class="align-middle text-center">
+                    {{ include('backoffice/bakery/_delete_form.html.twig') }}
                 </td>
             </tr>
         {% else %}
