--- a/templates/backoffice/security/login.html.twig
+++ b/templates/backoffice/security/login.html.twig
@@ -1,20 +1,14 @@
 {% extends 'base.html.twig' %}
 
+{% block article %}
+{% endblock article %}
+
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
 <div class="container">
     <form method="post">
-        {% if error %}
-            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        {% endif %}
-
-        {% if app.user %}
-            <div class="mb-3">
-                You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-            </div>
-        {% endif %}
-        
+               
             <h1 class="h3 mb-3 font-weight-normal text-uppercase">Please sign in</h1>
         
             <label for="inputEmail">Email</label>
@@ -22,14 +16,7 @@
             <label for="inputPassword">Password</label>
             <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
             
-            <input type="hidden" name="_csrf_token"
-                value="{{ csrf_token('authenticate') }}"
-            >
-        
-
-        
-            {#Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-            See https://symfony.com/doc/current/security/remember_me.html#}
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
             <div class="checkbox mb-3">
                 <label>
