--- a/templates/backoffice/product/index.html.twig
+++ b/templates/backoffice/product/index.html.twig
@@ -1,46 +1,45 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Product index
-{% endblock %}
+{% block title %}Product index{% endblock %}
 
 {% block body %}
 
-	<h1 class="text-uppercase">Product index</h1>
+    <h1 class="text-uppercase">Product index</h1>
 
-	<a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_product_new') }}">Create new</a>
+    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_product_new') }}">Create new</a>
 
-	<table class="table table-dark table-striped">
-		<thead>
-			<tr>
-				<th class="text-center">Id</th>
-				<th class="text-center">Name</th>
-				<th class="text-center">Price</th>
-				<th class="text-center">Description</th>
-				<th class="text-center">Picture</th>
-				<th class="text-center">actions</th>
-			</tr>
-		</thead>
-		<tbody>
-			{% for product in products %}
-				<tr>
-					<td class="align-middle text-center">{{ product.id }}</td>
-					<td class="align-middle text-center">{{ product.name }}</td>
-					<td class="align-middle text-center">{{ product.price }}</td>
-					<td class="align-middle text-center">{{ product.description }}</td>
-					<td class="align-middle text-center">
-						<imgshow</a class="backoffice_images" src="{{ product.picture }}" </td> <td class="align-middle text-center"> <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_product_show', {'id': product.id}) }}">>
-							<a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_product_edit', {'id': product.id}) }}">edit</a>
-							<td class="align-middle text-center">{{ include('backoffice/product/_delete_form.html.twig') }}
-							</td>
-						</td>
-					</td>
-				</tr>
-			{% else %}
-				<tr>
-					<td colspan="6">no records found</td>
-				</tr>
-			{% endfor %}
-		</tbody>
-	</table>
+    <table class="table table-dark table-striped">
+        <thead>
+            <tr>
+                <th class="text-center">Id</th>
+                <th class="text-center">Name</th>
+                <th class="text-center">Price</th>
+                <th class="text-center">Description</th>
+                <th class="text-center">Picture</th>
+                <th class="text-center">actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for product in products %}
+            <tr>
+                <td class="align-middle text-center">{{ product.id }}</td>
+                <td class="align-middle text-center">{{ product.name }}</td>
+                <td class="align-middle text-center">{{ product.price }}</td>
+                <td class="align-middle text-center">{{ product.description }}</td>
+                <td class="align-middle text-center"><img class="backoffice_images" src="{{ product.picture }}"</td>
+                <td class="align-middle text-center">
+                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_product_show', {'id': product.id}) }}">show</a>
+                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_product_edit', {'id': product.id}) }}">edit</a>
+                    <td class="align-middle text-center">{{ include('backoffice/product/_delete_form.html.twig') }}
+                </td>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="6">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
 {% endblock %}
