--- a/templates/backoffice/category/index.html.twig
+++ b/templates/backoffice/category/index.html.twig
@@ -11,16 +11,16 @@
     <table class="table table-dark table-striped">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>actions</th>
+                <th class="text-center">Id</th>
+                <th class="text-center">Name</th>
+                <th class="text-center">actions</th>
             </tr>
         </thead>
         <tbody>
         {% for category in categories %}
             <tr>
-                <td>{{ category.id }}</td>
-                <td>{{ category.name }}</td>
+                <td class="align-middle text-center">{{ category.id }}</td>
+                <td class="align-middle text-center">{{ category.name }}</td>
                 <td class="align-middle text-center">
                     <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_category_show', {'id': category.id}) }}">show</a>
                     <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_category_edit', {'id': category.id}) }}">edit</a>
