link from userName to order details

--- a/templates/backoffice/user/index.html.twig
+++ b/templates/backoffice/user/index.html.twig
@@ -11,11 +11,11 @@
         <thead>
             <tr>
                 <th class="text-center">Id</th>
-                <th class="text-center">Email</th>
-                <th class="text-center">Roles</th>
                 <th class="text-center">Name</th>
+                <th class="text-center">Email</th>
                 <th class="text-center">Address</th>
                 <th class="text-center">Zip_code</th>
+                <th class="text-center">Roles</th>
                 <th class="text-center">actions</th>
             </tr>
         </thead>
@@ -23,11 +23,12 @@
         {% for user in users %}
             <tr>
                 <td class="align-middle text-center">{{ user.id }}</td>
+                {# Lien ci_dessous renvoie au détails de la commande de l'utilisateur #}
+                <td class="align-middle text-center"><a href="#">{{ user.name }}</a></td>
                 <td class="align-middle text-center">{{ user.email }}</td>
-                <td class="align-middle text-center">{{ user.roles ? user.roles|json_encode : '' }}</td>
-                <td class="align-middle text-center">{{ user.name }}</td>
                 <td class="align-middle text-center">{{ user.address }}</td>
                 <td class="align-middle text-center">{{ user.zipCode }}</td>
+                <td class="align-middle text-center">{{ user.roles ? user.roles|json_encode : '' }}</td>
                 <td class="align-middle text-center">
                     <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_user_show', {'id': user.id}) }}">show</a>
                     <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_user_edit', {'id': user.id}) }}">edit</a>
