--- a/templates/backoffice/category/edit.html.twig
+++ b/templates/backoffice/category/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Category{% endblock %}
+{% block title %}Mettre à jour une catégorie{% endblock %}
 
 {% block body %}
-    <h1 class="text-uppercase">Edit Category</h1>
+    <h1 class="text-uppercase">Mettre à jour une catégorie</h1>
 
-	<a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_category_index') }}">back to list</a>
+	<a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_category_index') }}">Retour à la liste</a>
 
-	{{ include('backoffice/category/_form.html.twig', {'button_label': 'Update'}) }}
+	{{ include('backoffice/category/_form.html.twig', {'button_label': 'Valider'}) }}
 
 	{{ include('backoffice/category/_delete_form.html.twig') }}
 {% endblock %}
