--- a/templates/backoffice/category/index.html.twig
+++ b/templates/backoffice/category/index.html.twig
@@ -1,19 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Category index{% endblock %}
+{% block title %}Liste des catégories{% endblock %}
 
 {% block body %}
-    <h1 class="text-uppercase">Category index</h1>
+    <h1 class="text-uppercase">Liste des catégories</h1>
 
-    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_category_new') }}">Create new</a>
+    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_category_new') }}">Créer une nouvelle catégorie</a>
 
 
     <table class="table table-dark table-striped">
         <thead>
             <tr>
                 <th class="text-center">Id</th>
-                <th class="text-center">Name</th>
-                <th class="text-center">actions</th>
+                <th class="text-center">Nom</th>
+                <th class="text-center">Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -22,8 +22,8 @@
                 <td class="align-middle text-center">{{ category.id }}</td>
                 <td class="align-middle text-center">{{ category.name }}</td>
                 <td class="align-middle text-center">
-                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_category_show', {'id': category.id}) }}">show</a>
-                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_category_edit', {'id': category.id}) }}">edit</a>
+                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_category_show', {'id': category.id}) }}">Détails</a>
+                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_category_edit', {'id': category.id}) }}">Mettre à jour</a>
                     <td class="align-middle text-center" id="delete">{{ include('backoffice/category/_delete_form.html.twig') }}</td>
                 </td>
             </tr>
