--- a/templates/backoffice/category/show.html.twig
+++ b/templates/backoffice/category/show.html.twig
@@ -1,15 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Category{% endblock %}
+{% block title %}Détails d'une catégorie{% endblock %}
 
 {% block body %}
-    <h1 class="text-uppercase">Category</h1>
+    <h1 class="text-uppercase">Détails d'une catégorie</h1>
 
     {{ include('backoffice/category/_delete_form.html.twig') }}
 
-    <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_category_index') }}">back to list</a>
+    <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_category_index') }}">Retour à la liste</a>
 
-    <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_category_edit', {'id': category.id}) }}">edit</a>
+    <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_category_edit', {'id': category.id}) }}">Mettre à jour</a>
 
     <table class="table table-dark table-striped">
         <tbody>
@@ -18,7 +18,7 @@
                 <td>{{ category.id }}</td>
             </tr>
             <tr>
-                <th>Name</th>
+                <th>Nom</th>
                 <td>{{ category.name }}</td>
             </tr>
 
