--- a/templates/backoffice/product/edit.html.twig
+++ b/templates/backoffice/product/edit.html.twig
@@ -1,14 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Product
-{% endblock %}
+{% block title %}Mettre à jour un produit{% endblock %}
 
 {% block body %}
-	<h1 class="text-uppercase">Edit Product</h1>
+	<h1 class="text-uppercase">Mettre à jour un produit</h1>
 
-	<a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_product_index') }}">back to list</a>
+	<a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_product_index') }}">Retour à la liste</a>
 
-	{{ include('backoffice/product/_form.html.twig', {'button_label': 'Update'}) }}
+	{{ include('backoffice/product/_form.html.twig', {'button_label': 'Valider'}) }}
 
 	{{ include('backoffice/product/_delete_form.html.twig') }}
 
