--- a/templates/backoffice/product/index.html.twig
+++ b/templates/backoffice/product/index.html.twig
@@ -1,22 +1,22 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Product index{% endblock %}
+{% block title %}Liste des produits{% endblock %}
 
 {% block body %}
 
-    <h1 class="text-uppercase">Product index</h1>
+    <h1 class="text-uppercase">Liste des produits</h1>
 
-    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_product_new') }}">Create new</a>
+    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_product_new') }}">Créer un nouveau produit</a>
 
     <table class="table table-dark table-striped">
         <thead>
             <tr>
                 <th class="text-center">Id</th>
-                <th class="text-center">Name</th>
-                <th class="text-center">Price</th>
+                <th class="text-center">Nom</th>
+                <th class="text-center">Prix</th>
                 <th class="text-center">Description</th>
-                <th class="text-center">Picture</th>
-                <th class="text-center">actions</th>
+                <th class="text-center">Image</th>
+                <th class="text-center">Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -28,8 +28,8 @@
                 <td class="align-middle text-center">{{ product.description }}</td>
                 <td class="align-middle text-center"><img class="backoffice_images" src="{{ product.picture }}"</td>
                 <td class="align-middle text-center">
-                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_product_show', {'id': product.id}) }}">show</a>
-                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_product_edit', {'id': product.id}) }}">edit</a>
+                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_product_show', {'id': product.id}) }}">Détails</a>
+                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_product_edit', {'id': product.id}) }}">Mettre à jour</a>
                     <td class="align-middle text-center" id="delete">{{ include('backoffice/product/_delete_form.html.twig') }}</td>
                 </td>
             </tr>
