--- a/templates/backoffice/product/new.html.twig
+++ b/templates/backoffice/product/new.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Product
+{% block title %}Nouveau produit
 {% endblock %}
 
 {% block body %}
-	<h1 class="text-uppercase">Create new Product</h1>
+	<h1 class="text-uppercase">Creation d'un nouveau produit</h1>
 
-	<a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_product_index') }}">back to list</a>
+	<a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_product_index') }}">Retour à la liste</a>
 
 	{{ include('backoffice/product/_form.html.twig') }}
 
