--- a/templates/backoffice/user/edit.html.twig
+++ b/templates/backoffice/user/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit User{% endblock %}
+{% block title %}Mettre à jour un utilisateur{% endblock %}
 
 {% block body %}
     <h1 class="text-uppercase">Edit User</h1>
 
-	<a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_user_index') }}">back to list</a>
+	<a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_user_index') }}">Retour à la liste</a>
 
-	{{ include('backoffice/user/_form.html.twig', {'button_label': 'Update'}) }}
+	{{ include('backoffice/user/_form.html.twig', {'button_label': 'Valider'}) }}
 
 	{{ include('backoffice/user/_delete_form.html.twig') }}
     
