--- a/templates/backoffice/user/index.html.twig
+++ b/templates/backoffice/user/index.html.twig
@@ -1,22 +1,22 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User index{% endblock %}
+{% block title %}Liste des utilisateurs{% endblock %}
 
 {% block body %}
-    <h1 class="text-uppercase">User index</h1>
+    <h1 class="text-uppercase">Liste des utilisateurs</h1>
 
-    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_user_new') }}">Create new</a>
+    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_user_new') }}">Créer un nouvel utilisateur</a>
 
     <table class="table table-dark table-striped">
         <thead>
             <tr>
                 <th class="text-center">Id</th>
-                <th class="text-center">Name</th>
+                <th class="text-center">Nom</th>
                 <th class="text-center">Email</th>
-                <th class="text-center">Address</th>
-                <th class="text-center">Zip_code</th>
+                <th class="text-center">Adresse</th>
+                <th class="text-center">Code postal</th>
                 <th class="text-center">Roles</th>
-                <th class="text-center">actions</th>
+                <th class="text-center">Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -30,8 +30,8 @@
                 <td class="align-middle text-center">{{ user.zipCode }}</td>
                 <td class="align-middle text-center">{{ user.roles ? user.roles|json_encode : '' }}</td>
                 <td class="align-middle text-center">
-                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_user_show', {'id': user.id}) }}">show</a>
-                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_user_edit', {'id': user.id}) }}">edit</a>
+                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_user_show', {'id': user.id}) }}">Détails</a>
+                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_user_edit', {'id': user.id}) }}">Mettre à jour</a>
                     <td class="align-middle text-center" id="delete">{{ include('backoffice/user/_delete_form.html.twig') }}</td>
                 </td>
             </tr>
