--- a/templates/backoffice/user/new.html.twig
+++ b/templates/backoffice/user/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New User{% endblock %}
+{% block title %}Nouvel utilisateur{% endblock %}
 
 {% block body %}
-    <h1 class="text-uppercase">Create new User</h1>
+    <h1 class="text-uppercase">Création d'un nouvel utilisateur</h1>
 
-	<a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_user_index') }}">back to list</a>
+	<a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_user_index') }}">Retour à la liste</a>
 
 	{{ include('backoffice/user/_form.html.twig') }}
 
