--- a/templates/backoffice/user/show.html.twig
+++ b/templates/backoffice/user/show.html.twig
@@ -1,16 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User
+{% block title %}Détails d'un utilisateur
 {% endblock %}
 
 {% block body %}
-	<h1 class="text-uppercase">User</h1>
+	<h1 class="text-uppercase">Détails d'un utilisateur</h1>
 
 	{{ include('backoffice/user/_delete_form.html.twig') }}
 
-	<a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_user_index') }}">back to list</a>
+	<a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_user_index') }}">Retour à la liste</a>
 
-	<a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_user_edit', {'id': user.id}) }}">edit</a>
+	<a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_user_edit', {'id': user.id}) }}">Mettre à jour</a>
 
 	<table class="table table-dark table-striped">
 
@@ -28,19 +28,15 @@
 				<td>{{ user.roles ? user.roles|json_encode : '' }}</td>
 			</tr>
 			<tr>
-				<th>Password</th>
-				<td>{{ user.password }}</td>
-			</tr>
-			<tr>
-				<th>Name</th>
+				<th>Nom</th>
 				<td>{{ user.name }}</td>
 			</tr>
 			<tr>
-				<th>Address</th>
+				<th>Adresse</th>
 				<td>{{ user.address }}</td>
 			</tr>
 			<tr>
-				<th>Zip_code</th>
+				<th>Code postal</th>
 				<td>{{ user.zipCode }}</td>
 			</tr>
 		</tbody>
