--- a/templates/backoffice/bakery/new.html.twig
+++ b/templates/backoffice/bakery/new.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1 class="text-uppercase">Create new Bakery</h1>
 
-     <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_bakery_index') }}">back to list</a>
+     <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_bakery_index') }}">retour à la liste</a>
 
     {{ include('backoffice/bakery/_form.html.twig') }}
 
