--- a/templates/backoffice/bakery/index.html.twig
+++ b/templates/backoffice/bakery/index.html.twig
@@ -1,25 +1,25 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Bakery index{% endblock %}
+{% block title %}Liste des Boulangeries{% endblock %}
 
 {% block body %}
-    <h1 class="text-uppercase">Bakery index</h1>
+    <h1 class="text-uppercase">Liste des Boulangeries</h1>
 
-    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_bakery_new') }}">Create new</a>
+    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_bakery_new') }}">Créer Boulangerie</a>
 
     <table class="table table-dark table-striped">
         <thead>
             <tr>
                 <th class="text-center">Id</th>
-                <th class="text-center">Name</th>
-                <th class="text-center">Address</th>
-                <th class="text-center">Profile_img</th>
-                <th class="text-center">Phone_number</th>
+                <th class="text-center">Nom</th>
+                <th class="text-center">Ville</th>
+                <th class="text-center">Image de Profil</th>
+                <th class="text-center">Contact</th>
                 <th class="text-center">Rating</th>
                 <th class="text-center">Status</th>
-                <th class="text-center">Delivery_fees</th>
-                <th class="text-center">Delivery_time</th>
-                <th class="text-center">Actions</th>
+                <th class="text-center">Frais de Livraison</th>
+                <th class="text-center">Délai de Livraison</th>
+                <th class="text-center"></th>
             </tr>
         </thead>
         <tbody>
@@ -35,8 +35,8 @@
                 <td class="align-middle text-center">{{ bakery.deliveryFees }}</td>
                 <td class="align-middle text-center">{{ bakery.deliveryTime }}</td>
                 <td class="align-middle text-center">
-                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_bakery_show', {'id': bakery.id}) }}">show</a>
-                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_bakery_edit', {'id': bakery.id}) }}">edit</a>
+                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_bakery_show', {'id': bakery.id}) }}">détail</a>
+                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_bakery_edit', {'id': bakery.id}) }}">mettre à jour</a>
                 </td>
                 <td class="align-middle text-center">
                     {{ include('backoffice/bakery/_delete_form.html.twig') }}
@@ -44,7 +44,7 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="10">no records found</td>
+                <td colspan="10">Aucune Boulangerie trouvé.</td>
             </tr>
         {% endfor %}
         </tbody>
