--- a/templates/backoffice/order/edit.html.twig
+++ b/templates/backoffice/order/edit.html.twig
@@ -1,13 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Order{% endblock %}
+{% block title %}Modifier Commande{% endblock %}
 
 {% block body %}
-    <h1>Edit Order</h1>
+    <h1 class="text-uppercase">Modifier Commande nº {{ order.id }}</h1>
 
-    {{ include('backoffice/order/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_backoffice_order_index') }}">back to list</a>
+    <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_order_index') }}">retour à la liste</a>
 
     {{ include('backoffice/order/_delete_form.html.twig') }}
+    
+    {{ include('backoffice/order/_form.html.twig', {'button_label': 'Submit'}) }}
+
 {% endblock %}
