--- a/templates/backoffice/tag/edit.html.twig
+++ b/templates/backoffice/tag/edit.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Tag{% endblock %}
+{% block title %}Modifier Tag{% endblock %}
 
 {% block body %}
-    <h1 class="text-uppercase">Edit Tag</h1>
+    <h1 class="text-uppercase">Modifier Tag nº {{ tag.id }}</h1>
 
-    <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_tag_index') }}">back to list</a>
+    <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_tag_index') }}">retour à la liste</a>
 
     {{ include('backoffice/tag/_delete_form.html.twig') }}
     
