--- a/templates/backoffice/tag/index.html.twig
+++ b/templates/backoffice/tag/index.html.twig
@@ -1,18 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Tag index{% endblock %}
+{% block title %}Liste des Tags{% endblock %}
 
 {% block body %}
-    <h1 class="text-uppercase">Tag index</h1>
+    <h1 class="text-uppercase">Liste des Tags</h1>
 
-    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_tag_new') }}">Create new</a>
+    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_tag_new') }}">Créer Tag</a>
 
     <table class="table table-dark table-striped">
         <thead>
             <tr>
                 <th class="text-center">Id</th>
-                <th class="text-center">Name</th>
-                <th class="text-center">actions</th>
+                <th class="text-center">Nom de Tag</th>
+                <th class="text-center"></th>
             </tr>
         </thead>
         <tbody>
@@ -21,8 +21,8 @@
                 <td class="align-middle text-center">{{ tag.id }}</td>
                 <td class="align-middle text-center">{{ tag.name }}</td>
                 <td class="align-middle text-center">
-                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_tag_show', {'id': tag.id}) }}">show</a>
-                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_tag_edit', {'id': tag.id}) }}">edit</a>
+                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_tag_show', {'id': tag.id}) }}">détails</a>
+                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_tag_edit', {'id': tag.id}) }}">mettre à jour</a>
                 </td>
                 <td class="align-middle text-center">
                     {{ include('backoffice/tag/_delete_form.html.twig') }}
@@ -30,7 +30,7 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="3">no records found</td>
+                <td colspan="3">Aucun Tag trouvé.</td>
             </tr>
         {% endfor %}
         </tbody>
