--- a/templates/backoffice/tag/new.html.twig
+++ b/templates/backoffice/tag/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('backoffice/tag/_form.html.twig') }}
 
-    <a href="{{ path('app_backoffice_tag_index') }}">back to list</a>
+    <a href="{{ path('app_backoffice_tag_index') }}">retour à la liste</a>
 {% endblock %}
