--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,7 +41,10 @@
                                 <a class="nav-link {% if app.request.get('_route') starts with 'app_backoffice_product_' %} active{% endif %}" href="{{ path('app_backoffice_bakery_index') }}">Produits</a>
                             </li>
                              <li class="nav-item">
-                                <a class="nav-link {% if app.request.get('_route') starts with 'app_backoffice_tag_' %} active{% endif %}" href="{{ path('app_backoffice_bakery_index') }}">Tags</a>
+                                <a class="nav-link {% if app.request.get('_route') starts with 'app_backoffice_tag_' %} active{% endif %}" href="{{ path('app_backoffice_tag_index') }}">Tags</a>
+                            </li>
+                             <li class="nav-item">
+                                <a class="nav-link {% if app.request.get('_route') starts with 'app_backoffice_order_' %} active{% endif %}" href="{{ path('app_backoffice_order_index') }}">Commandes</a>
                             </li>
                         </ul>
                         
