--- a/templates/backoffice/product/new.html.twig
+++ b/templates/backoffice/product/new.html.twig
@@ -1,10 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nouveau produit
-{% endblock %}
+{% block title %}Nouveau produit{% endblock %}
 
 {% block body %}
-	<h1 class="text-uppercase">Creation d'un nouveau produit</h1>
+	<h1 class="text-uppercase">Créer un Produit</h1>
 
 	<a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_product_index') }}">Retour à la liste</a>
 
