--- a/templates/backoffice/bakery/index.html.twig
+++ b/templates/backoffice/bakery/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1 class="text-uppercase">Liste des Boulangeries</h1>
 
-    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_bakery_new') }}">Créer Boulangerie</a>
+    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_bakery_new') }}">Créer une Boulangerie</a>
 
     <table class="table table-dark table-striped">
         <thead>
@@ -35,8 +35,8 @@
                 <td class="align-middle text-center">{{ bakery.deliveryFees }}</td>
                 <td class="align-middle text-center">{{ bakery.deliveryTime }}</td>
                 <td class="align-middle text-center">
-                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_bakery_show', {'id': bakery.id}) }}">détail</a>
-                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_bakery_edit', {'id': bakery.id}) }}">mettre à jour</a>
+                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_bakery_show', {'id': bakery.id}) }}">Détails</a>
+                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_bakery_edit', {'id': bakery.id}) }}">Mettre à jour</a>
                 </td>
                 <td class="align-middle text-center">
                     {{ include('backoffice/bakery/_delete_form.html.twig') }}
