--- a/templates/backoffice/bakery/new.html.twig
+++ b/templates/backoffice/bakery/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Bakery{% endblock %}
+{% block title %}Nouvelle Boulangerie{% endblock %}
 
 {% block body %}
-    <h1 class="text-uppercase">Create new Bakery</h1>
+    <h1 class="text-uppercase">Créer une Boulangerie</h1>
 
-     <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_bakery_index') }}">retour à la liste</a>
+     <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_bakery_index') }}">Retour à la liste</a>
 
     {{ include('backoffice/bakery/_form.html.twig') }}
 
