--- a/templates/backoffice/category/edit.html.twig
+++ b/templates/backoffice/category/edit.html.twig
@@ -1,13 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mettre à jour une catégorie{% endblock %}
+{% block title %}Mise à jour Catégorie{% endblock %}
 
 {% block body %}
-    <h1 class="text-uppercase">Mettre à jour une catégorie</h1>
+    <h1 class="text-uppercase">Mise à jour Catégorie nº {{ category.id }}</h1>
 
 	<a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_category_index') }}">Retour à la liste</a>
 
+	{{ include('backoffice/category/_delete_form.html.twig') }}
+
 	{{ include('backoffice/category/_form.html.twig', {'button_label': 'Valider'}) }}
 
-	{{ include('backoffice/category/_delete_form.html.twig') }}
 {% endblock %}
