--- a/templates/backoffice/category/index.html.twig
+++ b/templates/backoffice/category/index.html.twig
@@ -1,19 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des catégories{% endblock %}
+{% block title %}Liste des Catégories{% endblock %}
 
 {% block body %}
-    <h1 class="text-uppercase">Liste des catégories</h1>
+    <h1 class="text-uppercase">Liste des Catégories</h1>
 
-    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_category_new') }}">Créer une nouvelle catégorie</a>
-
+    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_category_new') }}">Créer une Catégorie</a>
 
     <table class="table table-dark table-striped">
         <thead>
             <tr>
                 <th class="text-center">Id</th>
                 <th class="text-center">Nom</th>
-                <th class="text-center">Actions</th>
+                <th class="text-center"></th>
             </tr>
         </thead>
         <tbody>
@@ -24,13 +23,15 @@
                 <td class="align-middle text-center">
                     <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_category_show', {'id': category.id}) }}">Détails</a>
                     <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_category_edit', {'id': category.id}) }}">Mettre à jour</a>
-                    <td class="align-middle text-center" id="delete">{{ include('backoffice/category/_delete_form.html.twig') }}</td>
+                </td>
+                <td class="align-middle text-center">
+                    {{ include('backoffice/category/_delete_form.html.twig') }}
                 </td>
             </tr>
             
         {% else %}
             <tr>
-                <td colspan="3">no records found</td>
+                <td colspan="3">Aucune Categorie trouvé.</td>
             </tr>
         {% endfor %}
         </tbody>
