--- a/templates/backoffice/category/new.html.twig
+++ b/templates/backoffice/category/new.html.twig
@@ -3,9 +3,10 @@
 {% block title %}Nouvelle Categorie{% endblock %}
 
 {% block body %}
-    <h1 class="text-uppercase">Création d'une nouvelle catégorie</h1>
+    <h1 class="text-uppercase">Créer une Catégorie</h1>
 	
     <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_category_index') }}">Retour à la liste</a>
 
 	{{ include('backoffice/category/_form.html.twig') }}
+    
 {% endblock %}
