--- a/templates/backoffice/category/show.html.twig
+++ b/templates/backoffice/category/show.html.twig
@@ -1,28 +1,29 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Détails d'une catégorie{% endblock %}
+{% block title %}Catégorie nº {{ category.id }}{% endblock %}
 
 {% block body %}
-    <h1 class="text-uppercase">Détails d'une catégorie</h1>
+    <div class="container">
+        <h1 class="text-uppercase">Détails de la Catégorie nº {{ category.id }}</h1>
 
-    {{ include('backoffice/category/_delete_form.html.twig') }}
+        {{ include('backoffice/category/_delete_form.html.twig') }}
 
-    <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_category_index') }}">Retour à la liste</a>
+        <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_category_index') }}">Retour à la liste</a>
 
-    <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_category_edit', {'id': category.id}) }}">Mettre à jour</a>
+        <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_category_edit', {'id': category.id}) }}">Mettre à jour</a>
 
-    <table class="table table-dark table-striped">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ category.id }}</td>
-            </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ category.name }}</td>
-            </tr>
+        <table class="table table-dark table-striped">
+            <tbody>
+                <tr>
+                    <th>Id</th>
+                    <td>{{ category.id }}</td>
+                </tr>
+                <tr>
+                    <th>Nom</th>
+                    <td>{{ category.name }}</td>
+                </tr>
 
-        </tbody>
-    </table>
-
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
