--- a/templates/backoffice/order/edit.html.twig
+++ b/templates/backoffice/order/edit.html.twig
@@ -1,14 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modifier Commande{% endblock %}
+{% block title %}Mise à jour Commande{% endblock %}
 
 {% block body %}
-    <h1 class="text-uppercase">Modifier Commande nº {{ order.id }}</h1>
+    <h1 class="text-uppercase">Mise à jour Commande nº {{ order.id }}</h1>
 
-    <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_order_index') }}">retour à la liste</a>
+    <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_order_index') }}">Retour à la liste</a>
 
     {{ include('backoffice/order/_delete_form.html.twig') }}
     
-    {{ include('backoffice/order/_form.html.twig', {'button_label': 'Submit'}) }}
+    {{ include('backoffice/order/_form.html.twig', {'button_label': 'Valider'}) }}
 
 {% endblock %}
