--- a/templates/backoffice/order/index.html.twig
+++ b/templates/backoffice/order/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1 class="text-uppercase">Liste des Commandes</h1>
 
-    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_order_new') }}">Créer Commande</a>
+    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_order_new') }}">Créer une Commande</a>
 
     <table class="table table-dark table-striped">
         <thead>
@@ -25,8 +25,8 @@
                 <td class="align-middle text-center">{{ order.orderDate ? order.orderDate|date('Y-m-d') : '' }}</td>
                 <td class="align-middle text-center">{{ order.user.name }}</td>
                 <td class="align-middle text-center">
-                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_order_show', {'id': order.id}) }}">détail</a>
-                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_order_edit', {'id': order.id}) }}">mettre à jour</a>
+                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_order_show', {'id': order.id}) }}">Détails</a>
+                    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_order_edit', {'id': order.id}) }}">Mettre à jour</a>
                 </td>
                 <td class="align-middle text-center">
                     {{ include('backoffice/order/_delete_form.html.twig') }}
