--- a/templates/backoffice/order/show.html.twig
+++ b/templates/backoffice/order/show.html.twig
@@ -4,13 +4,13 @@
 
 {% block body %}
     <div class="container">
-        <h1>Détail Commande nº {{ order.id }}</h1>
+        <h1 class="text-uppercase">Détails de la Commande nº {{ order.id }}</h1>
 
         {{ include('backoffice/order/_delete_form.html.twig') }}
         
-        <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_order_index') }}">retour à la liste</a>
+        <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_order_index') }}">Retour à la liste</a>
 
-        <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_order_edit', {'id': order.id}) }}">mettre à jour</a>
+        <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_order_edit', {'id': order.id}) }}">Mettre à jour</a>
 
         <table class="table table-dark table-striped">
             <tbody>
