--- a/templates/backoffice/product/index.html.twig
+++ b/templates/backoffice/product/index.html.twig
@@ -1,12 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des produits{% endblock %}
+{% block title %}Liste des Produits{% endblock %}
 
 {% block body %}
+    <h1 class="text-uppercase">Liste des Produits</h1>
 
-    <h1 class="text-uppercase">Liste des produits</h1>
-
-    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_product_new') }}">Créer un nouveau produit</a>
+    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_product_new') }}">Créer un Produit</a>
 
     <table class="table table-dark table-striped">
         <thead>
@@ -16,7 +15,7 @@
                 <th class="text-center">Prix</th>
                 <th class="text-center">Description</th>
                 <th class="text-center">Image</th>
-                <th class="text-center">Actions</th>
+                <th class="text-center"></th>
             </tr>
         </thead>
         <tbody>
@@ -30,12 +29,14 @@
                 <td class="align-middle text-center">
                     <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_product_show', {'id': product.id}) }}">Détails</a>
                     <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_product_edit', {'id': product.id}) }}">Mettre à jour</a>
-                    <td class="align-middle text-center" id="delete">{{ include('backoffice/product/_delete_form.html.twig') }}</td>
+                </td>
+                <td class="align-middle text-center">
+                    {{ include('backoffice/product/_delete_form.html.twig') }}
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="6">no records found</td>
+                <td colspan="6">Aucun Produit trouvé.</td>
             </tr>
         {% endfor %}
         </tbody>
