--- a/templates/backoffice/tag/edit.html.twig
+++ b/templates/backoffice/tag/edit.html.twig
@@ -1,14 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modifier Tag{% endblock %}
+{% block title %}Mise à jour Tag{% endblock %}
 
 {% block body %}
-    <h1 class="text-uppercase">Modifier Tag nº {{ tag.id }}</h1>
+    <h1 class="text-uppercase">Mise à jour Tag nº {{ tag.id }}</h1>
 
-    <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_tag_index') }}">retour à la liste</a>
+    <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_tag_index') }}">Retour à la liste</a>
 
     {{ include('backoffice/tag/_delete_form.html.twig') }}
     
-    {{ include('backoffice/tag/_form.html.twig', {'button_label': 'Submit'}) }}
+    {{ include('backoffice/tag/_form.html.twig', {'button_label': 'Valider'}) }}
 
 {% endblock %}
