--- a/templates/backoffice/tag/new.html.twig
+++ b/templates/backoffice/tag/new.html.twig
@@ -1,11 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Tag{% endblock %}
+{% block title %}Nouveau Tag{% endblock %}
 
 {% block body %}
-    <h1>Create new Tag</h1>
+    <h1 class="text-uppercase">Créer un Tag</h1>0
+
+    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_tag_index') }}">Retour à la liste</a>
 
     {{ include('backoffice/tag/_form.html.twig') }}
 
-    <a href="{{ path('app_backoffice_tag_index') }}">retour à la liste</a>
 {% endblock %}
