--- a/templates/backoffice/tag/show.html.twig
+++ b/templates/backoffice/tag/show.html.twig
@@ -4,13 +4,13 @@
 
 {% block body %}
     <div class="container">
-        <h1 class="text-uppercase">Tag nº {{ tag.id }}</h1>
+        <h1 class="text-uppercase">Détails du Tag nº {{ tag.id }}</h1>
 
         {{ include('backoffice/tag/_delete_form.html.twig') }}
 
-        <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_tag_index') }}">retour à la liste</a>
+        <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_tag_index') }}">Retour à la liste</a>
 
-        <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_tag_edit', {'id': tag.id}) }}">mettre à jour</a>
+        <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_tag_edit', {'id': tag.id}) }}">Mettre à jour</a>
 
         <table class="table table-dark table-striped">
             <tbody>
