--- a/templates/backoffice/user/edit.html.twig
+++ b/templates/backoffice/user/edit.html.twig
@@ -1,14 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mettre à jour un utilisateur{% endblock %}
+{% block title %}Mise à jour Utilisateur{% endblock %}
 
 {% block body %}
-    <h1 class="text-uppercase">Edit User</h1>
+    <h1 class="text-uppercase">Mise à jour Utilisateur</h1>
 
 	<a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_user_index') }}">Retour à la liste</a>
 
+	{{ include('backoffice/user/_delete_form.html.twig') }}
+
 	{{ include('backoffice/user/_form.html.twig', {'button_label': 'Valider'}) }}
 
-	{{ include('backoffice/user/_delete_form.html.twig') }}
     
 {% endblock %}
