--- a/templates/backoffice/user/index.html.twig
+++ b/templates/backoffice/user/index.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des utilisateurs{% endblock %}
+{% block title %}Liste des Utilisateurs{% endblock %}
 
 {% block body %}
-    <h1 class="text-uppercase">Liste des utilisateurs</h1>
+    <h1 class="text-uppercase">Liste des Utilisateurs</h1>
 
-    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_user_new') }}">Créer un nouvel utilisateur</a>
+    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_user_new') }}">Créer un Utilisateur</a>
 
     <table class="table table-dark table-striped">
         <thead>
@@ -16,14 +16,14 @@
                 <th class="text-center">Adresse</th>
                 <th class="text-center">Code postal</th>
                 <th class="text-center">Roles</th>
-                <th class="text-center">Actions</th>
+                <th class="text-center"></th>
             </tr>
         </thead>
         <tbody>
         {% for user in users %}
             <tr>
                 <td class="align-middle text-center">{{ user.id }}</td>
-                {# Lien ci_dessous renvoie au détails de la commande de l'utilisateur #}
+                {# Lien ci_dessous renvoie au Détails de la commande de l'utilisateur #}
                 <td class="align-middle text-center"><a href="#">{{ user.name }}</a></td>
                 <td class="align-middle text-center">{{ user.email }}</td>
                 <td class="align-middle text-center">{{ user.address }}</td>
@@ -32,12 +32,14 @@
                 <td class="align-middle text-center">
                     <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_user_show', {'id': user.id}) }}">Détails</a>
                     <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_user_edit', {'id': user.id}) }}">Mettre à jour</a>
-                    <td class="align-middle text-center" id="delete">{{ include('backoffice/user/_delete_form.html.twig') }}</td>
+                </td>
+                <td class="align-middle text-center">
+                    {{ include('backoffice/user/_delete_form.html.twig') }}
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="8">no records found</td>
+                <td colspan="8">Aucun Utilisateur trouvé.</td>
             </tr>
         {% endfor %}
         </tbody>
