--- a/templates/backoffice/user/new.html.twig
+++ b/templates/backoffice/user/new.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nouvel utilisateur{% endblock %}
+{% block title %}Nouvel Utilisateur{% endblock %}
 
 {% block body %}
-    <h1 class="text-uppercase">Création d'un nouvel utilisateur</h1>
+    <h1 class="text-uppercase">Créer un Utilisateur</h1>
 
 	<a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_user_index') }}">Retour à la liste</a>
 
