--- a/templates/backoffice/user/show.html.twig
+++ b/templates/backoffice/user/show.html.twig
@@ -1,45 +1,44 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Détails d'un utilisateur
-{% endblock %}
+{% block title %}Utilisateur nº {{ user.id }}{% endblock %}
 
 {% block body %}
-	<h1 class="text-uppercase">Détails d'un utilisateur</h1>
+	<div class="container">
+		<h1 class="text-uppercase">Détails de l'Utilisateur nº {{ user.id }}</h1>
 
-	{{ include('backoffice/user/_delete_form.html.twig') }}
+		{{ include('backoffice/user/_delete_form.html.twig') }}
 
-	<a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_user_index') }}">Retour à la liste</a>
+		<a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_user_index') }}">Retour à la liste</a>
 
-	<a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_user_edit', {'id': user.id}) }}">Mettre à jour</a>
+		<a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_user_edit', {'id': user.id}) }}">Mettre à jour</a>
 
-	<table class="table table-dark table-striped">
-
-		<tbody>
-			<tr>
-				<th>Id</th>
-				<td>{{ user.id }}</td>
-			</tr>
-			<tr>
-				<th>Email</th>
-				<td>{{ user.email }}</td>
-			</tr>
-			<tr>
-				<th>Roles</th>
-				<td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-			</tr>
-			<tr>
-				<th>Nom</th>
-				<td>{{ user.name }}</td>
-			</tr>
-			<tr>
-				<th>Adresse</th>
-				<td>{{ user.address }}</td>
-			</tr>
-			<tr>
-				<th>Code postal</th>
-				<td>{{ user.zipCode }}</td>
-			</tr>
-		</tbody>
-	</table>
-
+		<table class="table table-dark table-striped">
+			<tbody>
+				<tr>
+					<th>Id</th>
+					<td>{{ user.id }}</td>
+				</tr>
+				<tr>
+					<th>Email</th>
+					<td>{{ user.email }}</td>
+				</tr>
+				<tr>
+					<th>Roles</th>
+					<td>{{ user.roles ? user.roles|json_encode : '' }}</td>
+				</tr>
+				<tr>
+					<th>Nom</th>
+					<td>{{ user.name }}</td>
+				</tr>
+				<tr>
+					<th>Adresse</th>
+					<td>{{ user.address }}</td>
+				</tr>
+				<tr>
+					<th>Code postal</th>
+					<td>{{ user.zipCode }}</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
 {% endblock %}
