main page logo ok

--- a/templates/backoffice/main/index.html.twig
+++ b/templates/backoffice/main/index.html.twig
@@ -10,7 +10,7 @@
 
 <!-- main -->
 <div class="my-5 py-5 text-center">
-    <img src="images/breakfast-logo.png" height="100" alt="Logo O'flix" class="mb-3">
+    <img src="../images/breakfast-logo.png" height="100" alt="Logo O'flix" class="mb-3">
     <h1 class="display-6 fw-bold">Pour un p'tit dej sur commande.</h1>
 </div>
 {% endblock %}
