form fields in backoffice's bakeryList

--- a/templates/backoffice/bakery/index.html.twig
+++ b/templates/backoffice/bakery/index.html.twig
@@ -14,12 +14,12 @@
                 <th class="text-center">Nom</th>
                 <th class="text-center">Ville</th>
                 <th class="text-center">Image de Profil</th>
-                <th class="text-center">Contact</th>
+                <th class="text-center">Téléphone</th>
                 <th class="text-center">Rating</th>
                 <th class="text-center">Status</th>
                 <th class="text-center">Frais de Livraison</th>
                 <th class="text-center">Délai de Livraison</th>
-                <th class="text-center"></th>
+                <th class="text-center">Actions</th>
             </tr>
         </thead>
         <tbody>
