update field names for backoffice bakery forms

--- a/templates/backoffice/bakery/show.html.twig
+++ b/templates/backoffice/bakery/show.html.twig
@@ -31,19 +31,19 @@
                     <td>{{ bakery.address }}</td>
                 </tr>
                 <tr>
-                    <th>Image de Profil</th>
+                    <th>Photo de la boutique</th>
                     <td><img class="backoffice_images" src="{{ bakery.profileImg }}"</td>
                 </tr>
                 <tr>
-                    <th>Contact</th>
+                    <th>Numéro de téléphone</th>
                     <td>{{ bakery.phoneNumber }}</td>
                 </tr>
                 <tr>
-                    <th>Rating</th>
+                    <th>Note</th>
                     <td>{{ bakery.rating }}</td>
                 </tr>
                 <tr>
-                    <th>Status</th>
+                    <th>Statut</th>
                     <td>{{ bakery.status }}</td>
                 </tr>
                 <tr>
