--- a/templates/backoffice/tag/edit.html.twig
+++ b/templates/backoffice/tag/edit.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1 class="text-uppercase">Mise à jour Tag nº {{ tag.id }}</h1>
 
-    <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_tag_index') }}">Retour à la liste</a>
+    <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_tag_read') }}">Retour à la liste</a>
 
     {{ include('backoffice/tag/_delete_form.html.twig') }}
     
