--- a/templates/backoffice/tag/new.html.twig
+++ b/templates/backoffice/tag/new.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1 class="text-uppercase">Créer un Tag</h1>0
 
-    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_tag_index') }}">Retour à la liste</a>
+    <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_tag_read') }}">Retour à la liste</a>
 
     {{ include('backoffice/tag/_form.html.twig') }}
 
