--- a/templates/backoffice/tag/show.html.twig
+++ b/templates/backoffice/tag/show.html.twig
@@ -8,7 +8,7 @@
 
         {{ include('backoffice/tag/_delete_form.html.twig') }}
 
-        <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_tag_index') }}">Retour à la liste</a>
+        <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_tag_read') }}">Retour à la liste</a>
 
         <a class="btn btn-outline-light text-uppercase mb-2" href="{{ path('app_backoffice_tag_edit', {'id': tag.id}) }}">Mettre à jour</a>
 
