products in order and tags in product ok

--- a/templates/backoffice/product/show.html.twig
+++ b/templates/backoffice/product/show.html.twig
@@ -46,7 +46,11 @@
                 <!-- TODO intégrer les tags associés au produit-->
                 <tr>
                     <th>Tags</th>
-                    <td></td>
+                    <td>
+                        {% for tag in tags %}
+                            {{ tag.name }} /
+                        {% endfor %}
+                    </td>
                 </tr>
 
             </tbody>
