tag to products and products to order - tested

--- a/templates/backoffice/order/show.html.twig
+++ b/templates/backoffice/order/show.html.twig
@@ -34,7 +34,7 @@
                     <th>Produits</th>
                     <td>
                         {% for productItem in product %}
-                            {{ productItem.custom }} /
+                            {{ productItem.custom }}<br>
                         {% endfor %}
                     </td>
                 </tr>
