author corrected in show template

--- a/templates/backoffice/post/show.html.twig
+++ b/templates/backoffice/post/show.html.twig
@@ -36,7 +36,7 @@
             </tr>
             <tr>
                 <th>Auteur</th>
-                <td>{{ post.user.name }}</td>
+                <td>{{ post.author.name }}</td>
             </tr>
         </tbody>
     </table>
