--- a/templates/backoffice/post/read.html.twig
+++ b/templates/backoffice/post/read.html.twig
@@ -29,6 +29,9 @@
                     <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_post_show', {'id': post.id}) }}">Détails</a>
                     <a class="btn btn-outline-light text-uppercase" href="{{ path('app_backoffice_post_update', {'id': post.id}) }}">Mettre à jour</a>
                 </td>
+                <td class="align-middle text-center">
+                    {{ include('backoffice/post/_delete_form.html.twig') }}
+                </td>
             </tr>
         {% else %}
             <tr>
