--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,8 +22,8 @@
         
                 <div class="container-fluid">
                     <a href="{{ path('app_backoffice_main') }}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none header-logo">
-                        <img src="{{ asset('images/breakfast-logo-light.png') }}" height="24" alt="Logo BreakFast">
-                        <span class="header-logo__title">Break'FAST</span>
+                        <img src="{{ asset('images/breakfast-logo-light.png') }}" height="50" alt="Logo BreakFast">
+                        <span class="header-logo__title">Break'Fast</span>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent">
@@ -63,7 +63,7 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="#">Profil</a></li>
-                                    <li><a class="dropdown-item" href="{{ path('app_backoffice_bakery_read') }}">Backoffice</a></li>
+                                    <li><a class="dropdown-item" href="http://localhost:8080/">BreakFast</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
